# Ethics-of-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: etth1_autoregressive_clean_deviation_strong.yaml  etth1_autoregressive_oracle_strong.yaml  etth1_autoregressive_transformer.yaml  etth1_joint_oracle_strong.yaml  etth1_joint_transformer.yaml  exchange_autoregressive_oracle_strong.yaml  exchange_autoregressive_transformer.yaml  exchange_joint_oracle_strong.yaml  exchange_joint_transformer.yaml  synthetic_autoregressive_transformer.yaml  synthetic_joint_transformer.yaml  synthetic_linear.yaml  weather_autoregressive_oracle_strong.yaml  weather_autoregressive_transformer.yaml  weather_joint_oracle_strong.yaml  weather_joint_transformer.yaml
docs/: IMPLEMENTED_BY_GROUP.md  project_report_draft.tex
scripts/: download_benchmarks.py  run_experiment.py
src/llm_ts_audit/: __init__.py  cli.py  config.py
src/llm_ts_audit/attacks/: __init__.py  dga.py  objectives.py
src/llm_ts_audit/data/: loading.py
src/llm_ts_audit/evaluation/: __init__.py  metrics.py  runner.py
src/llm_ts_audit/interpretability/: analysis.py
src/llm_ts_audit/models/: __init__.py  base.py  factory.py  linear.py  torch_models.py
tests/: test_dga.py  test_metrics.py
