[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ts-audit"
version = "0.1.0"
description = "Black-box adversarial robustness auditing for time-series forecasting models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
dev = ["pytest>=8.0"]

[project.scripts]
llm-ts-audit = "llm_ts_audit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

